cabal-version:       >=1.10
name:                simple-plutus
version:             0.1.0.0
author:              Lars Brünjes
maintainer:          brunjlar@gmail.com
build-type:          Simple

library
  exposed-modules:     Examples.GuessingGame
                     , Plutus
                     , Plutus.Chain
                     , Plutus.Hash
                     , Plutus.StateMachine
                     , Plutus.Types
                     , Plutus.Types.Datum
                     , Plutus.Types.Value
                     , Plutus.Utils
                     , Plutus.Validation
  build-depends:       base >=4.14 && <4.15
                     , containers
                     , cryptonite
                     , mtl
                     , optics
                     , QuickCheck
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
