cabal-version:       >=1.10
name:                simple-plutus
version:             0.1.0.0
author:              Lars Brünjes
maintainer:          brunjlar@gmail.com
build-type:          Custom
extra-source-files:  README.md

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6 && <1.1

library
  exposed-modules:     Examples.Counter
                     , Examples.Crowd
                     , Examples.GuessingGame
                     , Examples.Fungible
                     , Examples.NoPlutus
                     , Plutus
                     , Plutus.Chain
                     , Plutus.Hash
                     , Plutus.StateMachine
                     , Plutus.Types
                     , Plutus.Types.Datum
                     , Plutus.Types.Value
                     , Plutus.Utils
                     , Plutus.Validation
  build-depends:       base >=4.14 && <4.15
                     , containers
                     , cryptonite
                     , mtl
                     , optics
                     , QuickCheck
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src

test-suite simple-plutus-doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:
      base
    , base-compat       >=0.10.5 && <0.12
    , doctest           >=0.15   && <0.17
    , template-haskell
  ghc-options:      -Wall -threaded
  hs-source-dirs:   doctest
  default-language: Haskell2010
